src/objects/RWE_BP_Benefitting_Region__c.object
<CustomObject>
    <description>Junction between BP &amp; (Benefitting) Country</description>
    <fields>
        <fullName>RWE_Business_Planning__c</fullName>
        <label>RWE Business Planning</label>
        <referenceTo>Business_Planning__c</referenceTo>
        <relationshipName>RWE_BP_Benefitting_Regions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RWE_Country__c</fullName>
        <label>RWE Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>RWE_BP_Benefitting_Regions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_BP_Benefitting_Country__c</fullName>
        <label>Unique BP Benefitting Country</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>BP Benefitting Country</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>BP Benefitting Country ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BP Benefitting Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>